# LLMScoreEngine

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  requirements.txt  score_models.py  scoring_config.py  setup.sh  setup_windows.bat
.github/workflows/: perf-accessibility.yml
config/: __init__.py  scoring_config.py
docs/: FILL_BENCH_README.md  SHELL_README.md
llmscore/: __init__.py  __main__.py
llmscore/actions/: __init__.py  base.py  catalog.py  registry.py
llmscore/analytics/: __init__.py  services.py
llmscore/automation/: __init__.py  scheduler.py  watchers.py
llmscore/compat/: __init__.py  adapters.py
llmscore/orchestrator/: __init__.py  controller.py  events.py
llmscore/shell/: __init__.py  layout.py  palette.py  preferences.py  runtime.py  scratchpad.py  suggestions.py  timeline.py  wizard.py
llmscore/shell/commands/: config.py
llmscore/shell/components/: __init__.py  dock.py  output_cards.py
llmscore/state/: __init__.py  policies.py  profiles.py  store.py
llmscore/utils/: __init__.py  logging.py  perf_monitor.py  rich_render.py
llmscore/workflows/: __init__.py  models.py  registry.py
model_scoring/: __init__.py  run_scoring.py  score_models.py
model_scoring/core/: constants.py  exceptions.py  types.py
model_scoring/data/: loaders.py  validators.py
model_scoring/scoring/: hf_score.py  hf_score_math.py  models_scoring.py
model_scoring/utils/: config_loader.py  csv_reporter.py  csv_reporter.py~theirs  graph_reporter.py  logging.py  report_template.html
tests/: conftest.py  test_model_scorer.py  test_run_scoring.py  test_scoring.py  test_validators.py
tests/automation/: test_helpers.py
tests/cli/: conftest.py  test_exec_mode.py  test_run_mode.py
tests/config/: test_scoring_config.py
tests/data/: test_validators.py
tests/legacy/: test_legacy_regressions.py
tests/perf/: test_smoke.py
tests/perf/automation/: test_watch_stress.py
tests/scoring/: test_hf_score.py  test_models_scoring.py
tests/shell/: test_layout.py  test_output_cards.py  test_phase1_regressions.py  test_phase3_runtime.py  test_runtime_e2e.py
tests/state/: test_policies.py  test_store.py
tests/transcripts/: recorder.py  test_shell_flows.py  test_shell_wizard_transcripts.py
tests/transcripts/baselines/: analytics_flow.yml  automation_flow.yml  automation_list_exec.yml  nightly_score_workflow.yml  onboarding_flow.yml  results_leaderboard_exec.yml  score_model_exec.yml  shell_wizard_analytics.yml  shell_wizard_analytics_color_blind.yml  shell_wizard_analytics_drilldown.yml  shell_wizard_analytics_pin_export.yml  (+7 more)
tests/utils/: test_csv_reporter.py  test_graph_reporter.py
tests/workflows/: test_registry.py
tools/fill-benchmark-pipeline/: .env.example  config_example.yaml  llm_benchmark_pipeline.py  moe_model_overrides.json  requirements.txt
